--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.11",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@supabase/supabase-js": "^2.42.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "graphql": "^16.8.1",
+    "jotai": "^2.8.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-maps": "^1.13.0",
+    "react-native-pager-view": "^6.3.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +41,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
