--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 14 Pro Max'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -27,6 +27,7 @@
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
