--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "ios": "react-native run-ios --simulator='iPhone 14 Pro Max'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios-release": "react-native run-ios --simulator='iPhone 14 Pro Max' --mode Release"
   },
   "dependencies": {
     "@apollo/client": "^3.9.11",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.19",
+    "@gluestack-ui/themed": "^1.1.34",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -31,6 +35,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3"
   },
@@ -49,6 +54,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
